# lib-agent

./: .gitignore  CMakeLists.txt
examples/: simple_agent.cpp
include/ServiceProvider/: model.h  modeldummy.h  modelgroq.h
include/agent/: Agent.h  Clock.h  Config.h  Deterministic.h  ExecutionContext.h  ExecutionPlan.h  Memory.h  Permissions.h  Result.h  Runtime.h  Sandbox.h  ServiceProviderFactory.h  Tool.h  ToolRegistry.h  Trace.h  Version.h  state_machine.h
include/runtime/: scheduler.h
include/toolcollection/: DriveTool.h  GmailTool.h  SlackNotifyTool.h
plugins/tools/filesystem/: CMakeLists.txt
src/ServiceProvider/: modeldummy.cpp  modelgroq.cpp
src/agent/: Agent.cpp  Clock.cpp  ExecutionPlan.cpp  Permissions.cpp  ToolRegistry.cpp  Trace.cpp
src/memory/: long_term.cpp  short_term.cpp
src/observability/: metrics.cpp  trace.cpp
src/runtime/: scheduler.cpp
src/tool/: executor.cpp  executor.h  sandbox.cpp
src/toolcollection/: SlackNotifyTool.cpp
tests/golden/: run_001.json  run_002.json
tests/unit/: phase6_test.cpp  test_agent.cpp  test_memory.cpp  test_tool.cpp
